--- a/locales/en.json
+++ b/locales/en.json
@@ -2,36 +2,81 @@
 "nhjr.ToolBox.name": "nhjrToolBox",
 "nhjr.ToolBox.description": "字符与类型处理、JSON、list、临时变量、正则表达式、便利积木、调试选项",
 
-"nhjr.ToolBox.help": "nhjrToolBox - help",
-"nhjr.ToolBox.JSON":"JSON",
-"nhjr.ToolBox.list":"list (array)",
-"nhjr.ToolBox.TemporaryVariable":"Temporary variable",
-"nhjr.ToolBox.StringAndType":"String and Type",
-"nhjr.ToolBox.RegularExpression":"Regular Expression",
-"nhjr.ToolBox.ConvenientModules":"Convenient modules",
-"nhjr.ToolBox.debug":"debug - nhjrToolBox",
+"nhjr.ToolBox.help": "NTBE - help",
+"nhjr.ToolBox.JSON":"JSON - NTBE",
+"nhjr.ToolBox.list":"list (array) - NTBE",
+"nhjr.ToolBox.TemporaryVariable":"Temporary variable - NTBE",
+"nhjr.ToolBox.StringAndType":"String and Type - NTBE",
+"nhjr.ToolBox.RegularExpression":"Regular Expression - NTBE",
+"nhjr.ToolBox.ConvenientModules":"Convenient modules - NTBE",
+"nhjr.ToolBox.debug":"debug - NTBE",
+
+"nhjr.ToolBox.settings.setting.default":"all settings default    (default: true)",
+"nhjr.ToolBox.settings.setting.reporterBlock_to_booleanBlock":"(reporter_block) to <boolean_block>    (default: false)",
+"nhjr.ToolBox.settings.setting.inputBoolean_to":"input<boolean> to",
+"nhjr.ToolBox.settings.setting.inputBoolean_to.boolean":"boolean (default)",
+"nhjr.ToolBox.settings.setting.inputBoolean_to.any":"any　　　　　",
+"nhjr.ToolBox.settings.setting.inputBoolean_to.string":"string　　　　",
+
+"nhjr.ToolBox.settings.setting.itemNumber_beginAt_1":"item number begin at 1    (default: false)",
+"nhjr.ToolBox.settings.setting.slice_includeEnding":"slice include ending    (default: false)",
+
+"nhjr.ToolBox.settings.setting.category.help":"category help    (default: true)",
+"nhjr.ToolBox.settings.setting.category.help.color":"category help color    (0~16777215, default: 32756)",
+"nhjr.ToolBox.settings.setting.category.JSON":"category JSON    (default: true)",
+"nhjr.ToolBox.settings.setting.category.JSON.color":"category JSON color    (0~16777215, default: 32756)",
+"nhjr.ToolBox.settings.setting.category.list":"category list    (default: true)",
+"nhjr.ToolBox.settings.setting.category.list.color":"category list color    (0~16777215, default: 32756)",
+"nhjr.ToolBox.settings.setting.category.TemporaryVariable":"category TemporaryVariable    (default: true)",
+"nhjr.ToolBox.settings.setting.category.TemporaryVariable.color":"category TemporaryVariable color    (0~16777215, default: 32756)",
+"nhjr.ToolBox.settings.setting.category.StringAndType":"category StringAndType    (default: true)",
+"nhjr.ToolBox.settings.setting.category.StringAndType.color":"category StringAndType color    (0~16777215, default: 32756)",
+"nhjr.ToolBox.settings.setting.category.RegularExpression":"category RegularExpression    (default: true)",
+"nhjr.ToolBox.settings.setting.category.RegularExpression.color":"category RegularExpression color    (0~16777215, default: 32756)",
+"nhjr.ToolBox.settings.setting.category.ConvenientModules":"category ConvenientModules    (default: true)",
+"nhjr.ToolBox.settings.setting.category.ConvenientModules.color":"category ConvenientModules color    (0~16777215, default: 32756)",
+"nhjr.ToolBox.settings.setting.category.debug":"category debug    (default: true)",
+"nhjr.ToolBox.settings.setting.category.debug.color":"category debug color    (0~16777215, default: 32756)",
+"nhjr.ToolBox.settings.setting.category.debug.more_debug_options":"more debug options    (default: false)",
+
+"nhjr.ToolBox.OperatorsMenu.menu.=":"=","nhjr.ToolBox.OperatorsMenu.menu.+=":"+=",
+"nhjr.ToolBox.OperatorsMenu.menu.-=":"-=","nhjr.ToolBox.OperatorsMenu.menu.*=":"*=",
+"nhjr.ToolBox.OperatorsMenu.menu./=":"/=","nhjr.ToolBox.OperatorsMenu.menu.%=":"%=",
+
+"nhjr.ToolBox.inTypeMenu.menu.":"","nhjr.ToolBox.inTypeMenu.menu.Number":"Number",
+"nhjr.ToolBox.inTypeMenu.menu.String":"String","nhjr.ToolBox.inTypeMenu.menu.Boolean":"Boolean",
+"nhjr.ToolBox.inTypeMenu.menu.ScratchBoolean":"ScratchBoolean",
 
 "nhjr.ToolBox.help.github": "goTo github repository",
 "nhjr.ToolBox.help.gitee": "goTo gitee repository",
 "nhjr.ToolBox.help.codingclip": "goTo codingclip project",
 
 "nhjr.ToolBox.debug.error":"nhjrToolBox error",
+"nhjr.ToolBox.debug.errorList":"nhjrToolBox errorList",
+"nhjr.ToolBox.debug.clearErrorList":"clear errorList",
 "nhjr.ToolBox.debug.ConsoleLog":"DevTool Console.log [PRINT]",
-"nhjr.ToolBox.debug.VM":"VM",
-"nhjr.ToolBox.debug.hatResult":"nhjrToolBox hat_oldValue",
-"nhjr.ToolBox.debug.clearHatResult":"⚠⚠⚠ nhjrToolBox clear hat_oldValue",
-"nhjr.ToolBox.debug.getAllTemporaryVariableJSON":"get all TemporaryVariable JSON",
+"nhjr.ToolBox.debug.setErrorListLengthLimit":"errorList length limit set [NUMBER]",
+"nhjr.ToolBox.debug.getErrorListLengthLimit":"errorList length limit",
+"nhjr.ToolBox.debug.setConsoleLogError":"console log error? set [BOOLEAN]",
+"nhjr.ToolBox.debug.isConsoleLogError":"is console log error",
+
+"nhjr.ToolBox.debug.VM":"VM.toJSON()",
+"nhjr.ToolBox.debug.getAllTemporaryVariableJSON":"get project all TemporaryVariable JSON",
+"nhjr.ToolBox.debug.getSpriteAllTemporaryVariableJSON":"get [ISSTAGE][SPRITE] all TemporaryVariable JSON",
 "nhjr.ToolBox.debug.setReturnError":"⚠⚠⚠ return error? set [BOOLEAN]","nhjr.ToolBox.debug.menu.true":"true","nhjr.ToolBox.debug.menu.false":"false",
 "nhjr.ToolBox.debug.isReturnError":"is return error",
 "nhjr.ToolBox.debug.setReturnObj":"⚠⚠⚠ return object? set [BOOLEAN]",
 "nhjr.ToolBox.debug.isReturnObj":"is return object",
 "nhjr.ToolBox.debug.JSON.parse":"⚠⚠⚠ JSON.parse [VALUE]",
 "nhjr.ToolBox.debug.JSON.stringify":"JSON.stringify [VALUE]",
+"nhjr.ToolBox.debug.newObj":"new [VALUE]",
+"nhjr.ToolBox.debug.logUtil":"DevTool Console.log(util)",
+"nhjr.ToolBox.debug.logVM":"DevTool Console.log(VM)",
 
 "nhjr.ToolBox.JSON.readValueFromKey":"JSON [JSON] readValueFromKey [KEY]",
 "nhjr.ToolBox.JSON.readKeys":"JSON [JSON] read [MENU]", "nhjr.ToolBox.JSON.readKeys.menu.keys":"keys", "nhjr.ToolBox.JSON.readKeys.menu.values":"values", "nhjr.ToolBox.JSON.readKeys.menu.entries":"entries",
 "nhjr.ToolBox.JSON.containsKey":"JSON [JSON] keys contains [KEY]",
-"nhjr.ToolBox.JSON.setValue":"JSON [JSON] [KEY] set value to [VALUE]",
+"nhjr.ToolBox.JSON.setValue":"JSON [JSON] [KEY] set value [OPERATOR][VALUE]",
 "nhjr.ToolBox.JSON.keyRename":"JSON [JSON] key [KEY] rename to [NEWKEY]",
 "nhjr.ToolBox.JSON.delKey":"JSON [JSON] delete key [KEY]",
 
@@ -41,12 +86,15 @@
 "nhjr.ToolBox.StringAndType.istrue": "[VALUE] is true",
 "nhjr.ToolBox.StringAndType.equal":"[VALUE1]==[VALUE2]",
 "nhjr.ToolBox.StringAndType.NOTequal":"[VALUE1]!=[VALUE2]",
+"nhjr.ToolBox.StringAndType.equalEqual":"[VALUE1]===[VALUE2]",
+"nhjr.ToolBox.StringAndType.NOTequalEqual":"[VALUE1]!==[VALUE2]",
 "nhjr.ToolBox.StringAndType.returnColor": "returnColor [VALUE]",
 "nhjr.ToolBox.StringAndType.returnForBoolean": "returnForBoolean [VALUE]",
 "nhjr.ToolBox.StringAndType.strToSTR":"[VALUE] to \"string\"",
 "nhjr.ToolBox.StringAndType.STRtoStr":"\"string\" [VALUE] to string",
 "nhjr.ToolBox.StringAndType.Number":"Number [VALUE]",
 "nhjr.ToolBox.StringAndType.String":"String [VALUE]",
+"nhjr.ToolBox.StringAndType.ScratchType":"ScratchType [VALUE]",
 "nhjr.ToolBox.StringAndType.repeat":"[VALUE] repeat [REPEAT]",
 "nhjr.ToolBox.StringAndType.slice":"[VALUE] slice( [NUMBER1] , [NUMBER2] )",
 "nhjr.ToolBox.StringAndType.DecimalToHex":"decimal to hex [VALUE] ,0x? [ADD0X]","nhjr.ToolBox.StringAndType.hex.menu.true":"true","nhjr.ToolBox.StringAndType.hex.menu.false":"false",
@@ -55,6 +103,7 @@
 "nhjr.ToolBox.StringAndType.RemoveBeginEndingWhiteSpace":"[VALUE] Remove begin&ending WhiteSpace",
 "nhjr.ToolBox.StringAndType.TextToURL":"TextToURL [CODE] [VALUE]","nhjr.ToolBox.StringAndType.TextToURL.menu.encodeURIComponent":"encodeURIComponent","nhjr.ToolBox.StringAndType.TextToURL.menu.escape":"escape","nhjr.ToolBox.StringAndType.TextToURL.menu.encodeURI":"encodeURI",
 "nhjr.ToolBox.StringAndType.URLToText":"URLToText [CODE] [VALUE]","nhjr.ToolBox.StringAndType.URLToText.menu.decodeURIComponent":"decodeURIComponent","nhjr.ToolBox.StringAndType.URLToText.menu.unescape":"unescape","nhjr.ToolBox.StringAndType.URLToText.menu.decodeURI":"decodeURI",
+"nhjr.ToolBox.StringAndType.toUpperOrLowerCase":"[VALUE][CODE]","nhjr.ToolBox.StringAndType.toUpperOrLowerCase.menu.toUpperCase":"toUpperCase","nhjr.ToolBox.StringAndType.toUpperOrLowerCase.menu.toLowerCase":"toLowerCase",
 "nhjr.ToolBox.StringAndType.charCodeAt":"[VALUE][NUMBER].charCodeAt()",
 "nhjr.ToolBox.StringAndType.fromCharCode":"String.fromCharCode([VALUE])",
 
@@ -64,7 +113,7 @@
 "nhjr.ToolBox.list.indexOf":"list [LIST] indexOf [INDEXOF]",
 "nhjr.ToolBox.list.lastIndexOf":"list [LIST] lastIndexOf [INDEXOF]",
 "nhjr.ToolBox.list.includes":"list [LIST] includes [VALUE]",
-"nhjr.ToolBox.list.setN":"list [LIST] item number [N] set to [VALUE]",
+"nhjr.ToolBox.list.setN":"list [LIST] item number [N] set [OPERATOR][VALUE]",
 "nhjr.ToolBox.list.removeDuplicateItems":"list [LIST] remove duplicate items",
 "nhjr.ToolBox.list.addItem":"list [LIST] add [VALUE]",
 "nhjr.ToolBox.list.mxxItem":"list [LIST] [M] item","nhjr.ToolBox.list.mxxItem.menu.max":"max","nhjr.ToolBox.list.mxxItem.menu.min":"min",
@@ -86,23 +135,82 @@
 "nhjr.ToolBox.ConvenientModules.ifElseReturn":"if [CONDITION] return [VALUE1] else return [VALUE2]",
 "nhjr.ToolBox.ConvenientModules.writeClipboard":"writeClipboard [TEXT]",
 "nhjr.ToolBox.ConvenientModules.isStage.menu.true":"Stage (true)","nhjr.ToolBox.ConvenientModules.isStage.menu.false":"Sprite (false)",
+"nhjr.ToolBox.ConvenientModules.isStage.menu.id":"id","nhjr.ToolBox.ConvenientModules.isStage.menu.drawableID":"drawableID",
+"nhjr.ToolBox.ConvenientModules.isStage.menu.thisClone":"thisClone","nhjr.ToolBox.ConvenientModules.isStage.menu.thisSprite":"thisSprite",
 "nhjr.ToolBox.ConvenientModules.getScratchList":"get [ISSTAGE] [SPRITE] list [NAME]",
 "nhjr.ToolBox.ConvenientModules.saveListToScratch":"set [ISSTAGE] [SPRITE] list [NAME] to [LIST]",
 "nhjr.ToolBox.ConvenientModules.getScratchVariable":"get [ISSTAGE] [SPRITE] Variable [NAME]",
-"nhjr.ToolBox.ConvenientModules.saveVariableToScratch":"set [ISSTAGE] [SPRITE] Variable [NAME] to [VALUE]",
+"nhjr.ToolBox.ConvenientModules.saveVariableToScratch":"set [ISSTAGE] [SPRITE] Variable [NAME][OPERATOR][IN_TYPE][VALUE]",
 "nhjr.ToolBox.ConvenientModules.spriteName":"sprite name",
 "nhjr.ToolBox.ConvenientModules.isStage":"isStage",
+"nhjr.ToolBox.ConvenientModules.cloneCounter":"ProjectCloneCounter",
+
+"nhjr.ToolBox.ConvenientModules.getSpriteInformation":"get sprite [IDNAME][ISSTAGE][SPRITE] cloneNumber [CLONENUM]",
+"nhjr.ToolBox.ConvenientModules.getSpriteInformation.menu.id":"id","nhjr.ToolBox.ConvenientModules.getSpriteInformation.menu.drawableID":"drawableID",
+"nhjr.ToolBox.ConvenientModules.getSpriteInformation.menu.effects":"effects","nhjr.ToolBox.ConvenientModules.getSpriteInformation.menu.direction":"direction",
+"nhjr.ToolBox.ConvenientModules.getSpriteInformation.menu.rotationStyle":"rotationStyle","nhjr.ToolBox.ConvenientModules.getSpriteInformation.menu.size":"size",
+"nhjr.ToolBox.ConvenientModules.getSpriteInformation.menu.tempo":"tempo","nhjr.ToolBox.ConvenientModules.getSpriteInformation.menu.volume":"volume",
+"nhjr.ToolBox.ConvenientModules.getSpriteInformation.menu.x":"x","nhjr.ToolBox.ConvenientModules.getSpriteInformation.menu.y":"y",
+"nhjr.ToolBox.ConvenientModules.getSpriteInformation.menu.deprecatedCache":"deprecatedCache","nhjr.ToolBox.ConvenientModules.getSpriteInformation.menu.draggable":"draggable",
+"nhjr.ToolBox.ConvenientModules.getSpriteInformation.menu.dragging":"dragging","nhjr.ToolBox.ConvenientModules.getSpriteInformation.menu.isOriginal":"isOriginal",
+"nhjr.ToolBox.ConvenientModules.getSpriteInformation.menu.visible":"visible","nhjr.ToolBox.ConvenientModules.getSpriteInformation.menu.name":"name",
+
+"nhjr.ToolBox.ConvenientModules.setSpriteInformation":"set sprite [IDNAME][ISSTAGE][SPRITE][OPERATOR][SET]",
+"nhjr.ToolBox.ConvenientModules.setSpriteXY":"set sprite [ISSTAGE][SPRITE] x: [X] y:[Y]",
+
+"nhjr.ToolBox.ConvenientModules.getSpriteEffects":"get sprite [ISSTAGE][SPRITE] effect [NAME]",
+"nhjr.ToolBox.ConvenientModules.setSpriteEffects":"set sprite [ISSTAGE][SPRITE] effect [NAME][OPERATOR][VALUE]",
+"nhjr.ToolBox.ConvenientModules.effects.menu.color":"color","nhjr.ToolBox.ConvenientModules.effects.menu.fisheye":"fisheye",
+"nhjr.ToolBox.ConvenientModules.effects.menu.whirl":"whirl","nhjr.ToolBox.ConvenientModules.effects.menu.pixelate":"pixelate",
+"nhjr.ToolBox.ConvenientModules.effects.menu.mosaic":"mosaic","nhjr.ToolBox.ConvenientModules.effects.menu.brightness":"brightness",
+"nhjr.ToolBox.ConvenientModules.effects.menu.ghost":"ghost",
+
+"nhjr.ToolBox.ConvenientModules.getSpriteCostumesInformation":"get sprite [ISSTAGE][SPRITE] costume [ITEM][NAME]",
+"nhjr.ToolBox.ConvenientModules.CostumesInformation.menu.assetId":"assetId","nhjr.ToolBox.ConvenientModules.CostumesInformation.menu.bitmapResolution":"bitmapResolution",
+"nhjr.ToolBox.ConvenientModules.CostumesInformation.menu.dataFormat":"dataFormat","nhjr.ToolBox.ConvenientModules.CostumesInformation.menu.md5":"md5",
+"nhjr.ToolBox.ConvenientModules.CostumesInformation.menu.name":"name","nhjr.ToolBox.ConvenientModules.CostumesInformation.menu.rotationCenterX":"rotationCenterX",
+"nhjr.ToolBox.ConvenientModules.CostumesInformation.menu.rotationCenterY":"rotationCenterY","nhjr.ToolBox.ConvenientModules.CostumesInformation.menu.size":"size",
+"nhjr.ToolBox.ConvenientModules.CostumesInformation.menu.skinId":"skinId",
+
+"nhjr.ToolBox.ConvenientModules.getSpriteCostumesCounter":"get sprite [ISSTAGE][SPRITE] costumes counter",
+
+"nhjr.ToolBox.ConvenientModules.getSpriteSoundInformation":"get sprite [ISSTAGE][SPRITE] sound [ITEM][NAME]",
+"nhjr.ToolBox.ConvenientModules.SoundInformation.menu.assetId":"assetId","nhjr.ToolBox.ConvenientModules.SoundInformation.menu.dataFormat":"dataFormat",
+"nhjr.ToolBox.ConvenientModules.SoundInformation.menu.format":"format","nhjr.ToolBox.ConvenientModules.SoundInformation.menu.md5":"md5",
+"nhjr.ToolBox.ConvenientModules.SoundInformation.menu.name":"name","nhjr.ToolBox.ConvenientModules.SoundInformation.menu.rate":"rate",
+"nhjr.ToolBox.ConvenientModules.SoundInformation.menu.sampleCount":"sampleCount","nhjr.ToolBox.ConvenientModules.SoundInformation.menu.soundId":"soundId",
+"nhjr.ToolBox.ConvenientModules.SoundInformation.menu.duration":"duration","nhjr.ToolBox.ConvenientModules.SoundInformation.menu.length":"length",
+"nhjr.ToolBox.ConvenientModules.SoundInformation.menu.numberOfChannels":"numberOfChannels","nhjr.ToolBox.ConvenientModules.SoundInformation.menu.sampleRate":"sampleRate",
+"nhjr.ToolBox.ConvenientModules.SoundInformation.menu.initialized":"initialized","nhjr.ToolBox.ConvenientModules.SoundInformation.menu.isPlaying":"isPlaying",
+"nhjr.ToolBox.ConvenientModules.SoundInformation.menu.playbackRate":"playbackRate","nhjr.ToolBox.ConvenientModules.SoundInformation.menu.startingUntil":"startingUntil",
+"nhjr.ToolBox.ConvenientModules.SoundInformation.menu.isStarting":"isStarting",
+
+"nhjr.ToolBox.ConvenientModules.getSpriteSoundsCounter":"get sprite [ISSTAGE][SPRITE] sounds counter",
+
+"nhjr.ToolBox.ConvenientModules.cloneNumber":"cloneNumber",
+"nhjr.ToolBox.ConvenientModules.timeStamp":"timeStamp",
+"nhjr.ToolBox.ConvenientModules.effects":"effects",
+"nhjr.ToolBox.ConvenientModules.getSpriteCloneCounter":"getSpriteCloneCounter[ISSTAGE][SPRITE]",
+
 
 "nhjr.ToolBox.TemporaryVariable.clearAllVariable":"clearAllTemporaryVariable",
-"nhjr.ToolBox.TemporaryVariable.setItoValue":"set TemporaryVariable [NAME] to [VALUE]",
+"nhjr.ToolBox.TemporaryVariable.setItoValue":"set TemporaryVariable [NAME][OPERATOR][IN_TYPE][VALUE]",
 "nhjr.ToolBox.TemporaryVariable.getVariable":"get TemporaryVariable [NAME]",
 "nhjr.ToolBox.TemporaryVariable.deleteVariable":"delete TemporaryVariable [NAME]",
 "nhjr.ToolBox.TemporaryVariable.VariableExist":"[NAME] TemporaryVariable exist",
+
+"nhjr.ToolBox.TemporaryVariable.clearSpriteAllVariable":"clearSprite [ISSTAGE][SPRITE] AllTemporaryVariable",
+"nhjr.ToolBox.TemporaryVariable.setItoSpriteValue":"setSprite [ISSTAGE][SPRITE] TemporaryVariable [NAME][OPERATOR][IN_TYPE][VALUE]",
+"nhjr.ToolBox.TemporaryVariable.getSpriteVariable":"getSprite [ISSTAGE][SPRITE] TemporaryVariable [NAME]",
+"nhjr.ToolBox.TemporaryVariable.deleteSpriteVariable":"deleteSprite [ISSTAGE][SPRITE] TemporaryVariable [NAME]",
+"nhjr.ToolBox.TemporaryVariable.SpriteVariableExist":"sprite [ISSTAGE][SPRITE] TemporaryVariable [NAME] exist",
 
 "nhjr.ToolBox.RegularExpression.test":"[VALUE1] .test( [VALUE2] )",
 "nhjr.ToolBox.RegularExpression.exec":"[VALUE1] .exec( [VALUE2] )",
 "nhjr.ToolBox.RegularExpression.search":"[VALUE1] .search( [VALUE2] )",
 "nhjr.ToolBox.RegularExpression.match":"[VALUE1] .[MENU] ( [VALUE2] )","nhjr.ToolBox.RegularExpression.match.menu.match":"match","nhjr.ToolBox.RegularExpression.match.menu.begin":"begin","nhjr.ToolBox.RegularExpression.match.menu.ending":"ending","nhjr.ToolBox.RegularExpression.match.menu.matchANDbeginANDending":"match, begin, ending","nhjr.ToolBox.RegularExpression.match.menu.beginANDending":"begin, ending",
 "nhjr.ToolBox.RegularExpression.replace":"[VALUE1] .replace( [VALUE2] , [VALUE3])",
+"nhjr.ToolBox.RegularExpression.replaceAll":"[VALUE1] .replaceAll( [VALUE2] , [VALUE3])",
 "nhjr.ToolBox.RegularExpression.split":"[VALUE1] .split( [VALUE2] )"
+
 }
