--- a/locales/zh-cn.json
+++ b/locales/zh-cn.json
@@ -1,32 +1,40 @@
 {
-"nhjr.ToolBox.help": "nhjrToolBox - 帮助",
-"nhjr.ToolBox.list":"列表 (数组)",
-"nhjr.ToolBox.TemporaryVariable":"临时变量",
-"nhjr.ToolBox.StringAndType":"字符串与类型",
-"nhjr.ToolBox.RegularExpression":"正则表达式",
-"nhjr.ToolBox.ConvenientModules":"便利积木",
-"nhjr.ToolBox.debug":"调试选项 - nhjrToolBox",
+"nhjr.ToolBox.help": "NTBE - 帮助",
+"nhjr.ToolBox.list":"列表 (数组) - NTBE",
+"nhjr.ToolBox.TemporaryVariable":"临时变量 - NTBE",
+"nhjr.ToolBox.StringAndType":"字符串与类型 - NTBE",
+"nhjr.ToolBox.RegularExpression":"正则表达式 - NTBE",
+"nhjr.ToolBox.ConvenientModules":"便利积木 - NTBE",
+"nhjr.ToolBox.debug":"调试选项 - NTBE",
 
 "nhjr.ToolBox.help.github": "前往 github 仓库",
 "nhjr.ToolBox.help.gitee": "前往 gitee 仓库",
 "nhjr.ToolBox.help.codingclip": "前往 别针社区 作品",
 
 "nhjr.ToolBox.debug.error":"nhjrToolBox 报错",
+"nhjr.ToolBox.debug.errorList":"nhjrToolBox 报错列表",
+"nhjr.ToolBox.debug.clearErrorList":"清除报错列表",
+"nhjr.ToolBox.debug.setErrorListLengthLimit":"报错列表长度上限 设为 [NUMBER]",
+"nhjr.ToolBox.debug.getErrorListLengthLimit":" 报错列表长度上限",
+"nhjr.ToolBox.debug.setConsoleLogError":"控制台打印错误? 设为 [BOOLEAN]",
+"nhjr.ToolBox.debug.isConsoleLogError":"控制台会打印错误",
+
 "nhjr.ToolBox.debug.ConsoleLog":"浏览器开发者工具输出日志 [PRINT]",
-"nhjr.ToolBox.debug.hatResult":"nhjrToolBox 帽头积木记录值",
-"nhjr.ToolBox.debug.clearHatResult":"⚠⚠⚠ nhjrToolBox 清除 帽头积木记录值",
-"nhjr.ToolBox.debug.getAllTemporaryVariableJSON":"获取所有临时变量的JSON",
+"nhjr.ToolBox.debug.getAllTemporaryVariableJSON":"获取该项目所有临时变量的JSON",
+"nhjr.ToolBox.debug.getSpriteAllTemporaryVariableJSON":"获取角色 [ISSTAGE][SPRITE] 的所有临时变量的JSON",
 "nhjr.ToolBox.debug.setReturnError":"⚠⚠⚠ 返回错误？设为 [BOOLEAN]",
 "nhjr.ToolBox.debug.isReturnError":"会返回错误？",
 "nhjr.ToolBox.debug.setReturnObj":"⚠⚠⚠ 返回对象？设为 [BOOLEAN]",
 "nhjr.ToolBox.debug.isReturnObj":"会返回对象？",
 "nhjr.ToolBox.debug.JSON.parse":"⚠⚠⚠ 字符串转对象 JSON.parse [VALUE]",
 "nhjr.ToolBox.debug.JSON.stringify":"对象转字符串 JSON.stringify [VALUE]",
+"nhjr.ToolBox.debug.logUtil":"浏览器开发者工具输出(util)",
+"nhjr.ToolBox.debug.logVM":"浏览器开发者工具输出(VM)",
 
 "nhjr.ToolBox.JSON.readValueFromKey":"JSON [JSON] 从键[KEY]读值",
-"nhjr.ToolBox.JSON.readKeys":"JSON [JSON] 读取 [MENU]", "nhjr.ToolBox.JSON.readKeys.menu.keys":"所有键", "nhjr.ToolBox.JSON.readKeys.menu.values":"所有值", "nhjr.ToolBox.JSON.readKeys.menu.entries":"所有键值的二维列表",
+"nhjr.ToolBox.JSON.readKeys":"JSON [JSON] 读取 [MENU]", "nhjr.ToolBox.JSON.readKeys.menu.keys":"所有键 (keys)", "nhjr.ToolBox.JSON.readKeys.menu.values":"所有值 (values)", "nhjr.ToolBox.JSON.readKeys.menu.entries":"所有键值的二维列表 (entries)",
 "nhjr.ToolBox.JSON.containsKey":"JSON [JSON] 包含 [KEY] 键",
-"nhjr.ToolBox.JSON.setValue":"JSON [JSON] [KEY] 设置值为 [VALUE]",
+"nhjr.ToolBox.JSON.setValue":"JSON [JSON] [KEY] 设置值 [OPERATOR][VALUE]",
 "nhjr.ToolBox.JSON.keyRename":"JSON [JSON] 键 [KEY] 重命名为 [NEWKEY]",
 "nhjr.ToolBox.JSON.delKey":"JSON [JSON] 删除键 [KEY]",
 
@@ -47,6 +55,7 @@
 "nhjr.ToolBox.StringAndType.RemoveBeginEndingWhiteSpace":"[VALUE] 删除开头结尾空白符",
 "nhjr.ToolBox.StringAndType.TextToURL":"文字转链接 [CODE] [VALUE]",
 "nhjr.ToolBox.StringAndType.URLToText":"链接转文字 [CODE] [VALUE]",
+"nhjr.ToolBox.StringAndType.toUpperOrLowerCase.menu.toUpperCase":"转大写字母 (toUpperCase)","nhjr.ToolBox.StringAndType.toUpperOrLowerCase.menu.toLowerCase":"转小写字母 (toLowerCase)",
 "nhjr.ToolBox.StringAndType.charCodeAt":"[VALUE]第[NUMBER]个字符的编码",
 "nhjr.ToolBox.StringAndType.fromCharCode":"编码为[VALUE]的字符",
 
@@ -56,10 +65,10 @@
 "nhjr.ToolBox.list.indexOf":"列表 [LIST] 的第一个 [INDEXOF]",
 "nhjr.ToolBox.list.lastIndexOf":"列表 [LIST] 的最后一个 [INDEXOF]",
 "nhjr.ToolBox.list.includes":"列表 [LIST] 包含 [VALUE]",
-"nhjr.ToolBox.list.setN":"列表 [LIST] 第 [N] 项设为 [VALUE]",
+"nhjr.ToolBox.list.setN":"列表 [LIST] 第 [N] 项 [OPERATOR][VALUE]",
 "nhjr.ToolBox.list.removeDuplicateItems":"列表 [LIST] 去除重复项",
 "nhjr.ToolBox.list.addItem":"列表 [LIST] 加入 [VALUE]",
-"nhjr.ToolBox.list.mxxItem":"列表 [LIST] 的 [M] 项","nhjr.ToolBox.list.mxxItem.menu.max":"最大","nhjr.ToolBox.list.mxxItem.menu.min":"最小",
+"nhjr.ToolBox.list.mxxItem":"列表 [LIST] 的 [M] 项","nhjr.ToolBox.list.mxxItem.menu.max":"最大 (max)","nhjr.ToolBox.list.mxxItem.menu.min":"最小 (min)",
 "nhjr.ToolBox.list.sort":"[LIST] .排序 ([FUN])","nhjr.ToolBox.list.sort.fun.menu.null":"","nhjr.ToolBox.list.sort.fun.menu.up":"升序","nhjr.ToolBox.list.sort.fun.menu.down":"降序",
 "nhjr.ToolBox.list.reverse":"[LIST]倒序",
 "nhjr.ToolBox.list.flat":"[LIST]扁平化[NUM]层",
@@ -77,20 +86,75 @@
 "nhjr.ToolBox.ConvenientModules.getScratchList":"获取 [ISSTAGE] [SPRITE] 列表 [NAME]",
 "nhjr.ToolBox.ConvenientModules.saveListToScratch":"设置 [ISSTAGE] [SPRITE] 列表 [NAME] 为 [LIST]",
 "nhjr.ToolBox.ConvenientModules.getScratchVariable":"获取 [ISSTAGE] [SPRITE] 变量 [NAME]",
-"nhjr.ToolBox.ConvenientModules.saveVariableToScratch":"设置 [ISSTAGE] [SPRITE] 变量 [NAME] 为 [VALUE]",
+"nhjr.ToolBox.ConvenientModules.saveVariableToScratch":"设置 [ISSTAGE] [SPRITE] 变量 [NAME][OPERATOR][IN_TYPE][VALUE]",
 "nhjr.ToolBox.ConvenientModules.spriteName":"角色名称",
 "nhjr.ToolBox.ConvenientModules.isStage":"该角色是背景",
+"nhjr.ToolBox.ConvenientModules.cloneCounter":"项目克隆体数量总计",
+"nhjr.ToolBox.ConvenientModules.getSpriteBoolean":"获取角色 [IDNAME][ISSTAGE][SPRITE] 克隆体编号 [CLONENUM]",
+"nhjr.ToolBox.ConvenientModules.cloneNumber":"克隆体编号",
+"nhjr.ToolBox.ConvenientModules.timeStamp":"时间戳",
+"nhjr.ToolBox.ConvenientModules.getSpriteCloneCounter":"获取角色的克隆体数量[ISSTAGE][SPRITE]",
+
+"nhjr.ToolBox.ConvenientModules.getSpriteInformation":"获取角色 [IDNAME][ISSTAGE][SPRITE] 克隆体编号 [CLONENUM]",
+"nhjr.ToolBox.ConvenientModules.getSpriteInformation.menu.id":"id","nhjr.ToolBox.ConvenientModules.getSpriteInformation.menu.drawableID":"绘制id (drawableID)",
+"nhjr.ToolBox.ConvenientModules.getSpriteInformation.menu.effects":"特效 (effects)","nhjr.ToolBox.ConvenientModules.getSpriteInformation.menu.direction":"角度 (direction)",
+"nhjr.ToolBox.ConvenientModules.getSpriteInformation.menu.rotationStyle":"旋转方式 (rotationStyle)","nhjr.ToolBox.ConvenientModules.getSpriteInformation.menu.size":"大小 (size)",
+"nhjr.ToolBox.ConvenientModules.getSpriteInformation.menu.tempo":"演奏速度 (tempo)","nhjr.ToolBox.ConvenientModules.getSpriteInformation.menu.volume":"音量 (volume)",
+"nhjr.ToolBox.ConvenientModules.getSpriteInformation.menu.x":"x","nhjr.ToolBox.ConvenientModules.getSpriteInformation.menu.y":"y",
+"nhjr.ToolBox.ConvenientModules.getSpriteInformation.menu.deprecatedCache":"deprecatedCache","nhjr.ToolBox.ConvenientModules.getSpriteInformation.menu.draggable":"允许拖动 (draggable)",
+"nhjr.ToolBox.ConvenientModules.getSpriteInformation.menu.dragging":"正在拖动 (dragging)","nhjr.ToolBox.ConvenientModules.getSpriteInformation.menu.isOriginal":"isOriginal",
+"nhjr.ToolBox.ConvenientModules.getSpriteInformation.menu.visible":"显示 (visible)","nhjr.ToolBox.ConvenientModules.getSpriteInformation.menu.name":"名称 (name)",
+
+"nhjr.ToolBox.ConvenientModules.setSpriteInformation":"设置角色 [IDNAME][ISSTAGE][SPRITE][OPERATOR][SET]",
+"nhjr.ToolBox.ConvenientModules.setSpriteXY":"设置角色 [ISSTAGE][SPRITE] x: [X] y:[Y]",
+
+"nhjr.ToolBox.ConvenientModules.getSpriteEffects":"获取角色 [ISSTAGE][SPRITE] 的特效 [NAME] ",
+"nhjr.ToolBox.ConvenientModules.setSpriteEffects":"设置角色 [ISSTAGE][SPRITE] 的特效 [NAME][OPERATOR][VALUE]",
+"nhjr.ToolBox.ConvenientModules.effects.menu.color":"颜色 (color)","nhjr.ToolBox.ConvenientModules.effects.menu.fisheye":"鱼眼 (fisheye)",
+"nhjr.ToolBox.ConvenientModules.effects.menu.whirl":"旋涡 (whirl)","nhjr.ToolBox.ConvenientModules.effects.menu.pixelate":"像素化 (pixelate)",
+"nhjr.ToolBox.ConvenientModules.effects.menu.mosaic":"马赛克 (mosaic)","nhjr.ToolBox.ConvenientModules.effects.menu.brightness":"亮度 (brightness)",
+"nhjr.ToolBox.ConvenientModules.effects.menu.ghost":"虚像 (ghost)",
+
+"nhjr.ToolBox.ConvenientModules.getSpriteCostumesInformation":"获取角色 [ISSTAGE][SPRITE] 的造型 [ITEM] 的 [NAME]",
+"nhjr.ToolBox.ConvenientModules.CostumesInformation.menu.assetId":"assetId","nhjr.ToolBox.ConvenientModules.CostumesInformation.menu.bitmapResolution":"bitmapResolution",
+"nhjr.ToolBox.ConvenientModules.CostumesInformation.menu.dataFormat":"格式 (dataFormat)","nhjr.ToolBox.ConvenientModules.CostumesInformation.menu.md5":"md5",
+"nhjr.ToolBox.ConvenientModules.CostumesInformation.menu.name":"名称 (name)","nhjr.ToolBox.ConvenientModules.CostumesInformation.menu.rotationCenterX":"rotationCenterX",
+"nhjr.ToolBox.ConvenientModules.CostumesInformation.menu.rotationCenterY":"rotationCenterY","nhjr.ToolBox.ConvenientModules.CostumesInformation.menu.size":"大小 (size)",
+"nhjr.ToolBox.ConvenientModules.CostumesInformation.menu.skinId":"造型编号 (skinId)",
+
+"nhjr.ToolBox.ConvenientModules.getSpriteCostumesCounter":"获取角色 [ISSTAGE][SPRITE] 的造型数量",
+
+"nhjr.ToolBox.ConvenientModules.getSpriteSoundInformation":"获取角色 [ISSTAGE][SPRITE] 的声音 [ITEM] 的 [NAME]",
+"nhjr.ToolBox.ConvenientModules.SoundInformation.menu.assetId":"assetId","nhjr.ToolBox.ConvenientModules.SoundInformation.menu.dataFormat":"格式 (dataFormat)",
+"nhjr.ToolBox.ConvenientModules.SoundInformation.menu.format":"format","nhjr.ToolBox.ConvenientModules.SoundInformation.menu.md5":"md5",
+"nhjr.ToolBox.ConvenientModules.SoundInformation.menu.name":"名称 (name)","nhjr.ToolBox.ConvenientModules.SoundInformation.menu.rate":"速度 (rate)",
+"nhjr.ToolBox.ConvenientModules.SoundInformation.menu.sampleCount":"sampleCount","nhjr.ToolBox.ConvenientModules.SoundInformation.menu.soundId":"声音编号 (soundId)",
+"nhjr.ToolBox.ConvenientModules.SoundInformation.menu.duration":"时长 (duration)","nhjr.ToolBox.ConvenientModules.SoundInformation.menu.length":"length",
+"nhjr.ToolBox.ConvenientModules.SoundInformation.menu.numberOfChannels":"numberOfChannels","nhjr.ToolBox.ConvenientModules.SoundInformation.menu.sampleRate":"sampleRate",
+"nhjr.ToolBox.ConvenientModules.SoundInformation.menu.initialized":"initialized","nhjr.ToolBox.ConvenientModules.SoundInformation.menu.isPlaying":"正在播放 (isPlaying)",
+"nhjr.ToolBox.ConvenientModules.SoundInformation.menu.playbackRate":"playbackRate","nhjr.ToolBox.ConvenientModules.SoundInformation.menu.startingUntil":"startingUntil",
+"nhjr.ToolBox.ConvenientModules.SoundInformation.menu.isStarting":"isStarting",
+
+"nhjr.ToolBox.ConvenientModules.getSpriteSoundsCounter":"获取角色 [ISSTAGE][SPRITE] 的声音数量",
+
 
 "nhjr.ToolBox.TemporaryVariable.clearAllVariable":"清除所有临时变量",
-"nhjr.ToolBox.TemporaryVariable.setItoValue":"设置临时变量 [NAME] 为 [VALUE]",
+"nhjr.ToolBox.TemporaryVariable.setItoValue":"设置临时变量 [NAME][OPERATOR][IN_TYPE][VALUE]",
 "nhjr.ToolBox.TemporaryVariable.getVariable":"获取临时变量的值 [NAME]",
 "nhjr.ToolBox.TemporaryVariable.deleteVariable":"删除临时变量 [NAME]",
 "nhjr.ToolBox.TemporaryVariable.VariableExist":"[NAME] 临时变量已存在？",
 
+"nhjr.ToolBox.TemporaryVariable.clearSpriteAllVariable":"清除角色 [ISSTAGE][SPRITE] 里的所有临时变量",
+"nhjr.ToolBox.TemporaryVariable.setItoSpriteValue":"设置角色 [ISSTAGE][SPRITE] 的临时变量 [NAME][OPERATOR][IN_TYPE][VALUE]",
+"nhjr.ToolBox.TemporaryVariable.getSpriteVariable":"获取角色 [ISSTAGE][SPRITE] 的临时变量 [NAME]",
+"nhjr.ToolBox.TemporaryVariable.deleteSpriteVariable":"删除角色 [ISSTAGE][SPRITE] 的临时变量 [NAME]",
+"nhjr.ToolBox.TemporaryVariable.SpriteVariableExist":"角色 [ISSTAGE][SPRITE] 存在名为 [NAME] 的临时变量",
+
 "nhjr.ToolBox.RegularExpression.test":"[VALUE1] .测试( [VALUE2] )",
 "nhjr.ToolBox.RegularExpression.exec":"[VALUE1] .执行( [VALUE2] )",
 "nhjr.ToolBox.RegularExpression.search":"[VALUE1] .搜索( [VALUE2] )",
-"nhjr.ToolBox.RegularExpression.match":"[VALUE1] .[MENU] ( [VALUE2] )","nhjr.ToolBox.RegularExpression.match.menu.match":"查找符合的内容","nhjr.ToolBox.RegularExpression.match.menu.begin":"内容开头","nhjr.ToolBox.RegularExpression.match.menu.ending":"内容结尾","nhjr.ToolBox.RegularExpression.match.menu.matchANDbeginANDending":"符合的内容, 开头, 结尾","nhjr.ToolBox.RegularExpression.match.menu.beginANDending":"开头, 结尾",
+"nhjr.ToolBox.RegularExpression.match":"[VALUE1] .[MENU] ( [VALUE2] )","nhjr.ToolBox.RegularExpression.match.menu.match":"查找符合的内容 (match)","nhjr.ToolBox.RegularExpression.match.menu.begin":"内容开头","nhjr.ToolBox.RegularExpression.match.menu.ending":"内容结尾","nhjr.ToolBox.RegularExpression.match.menu.matchANDbeginANDending":"符合的内容, 开头, 结尾","nhjr.ToolBox.RegularExpression.match.menu.beginANDending":"开头, 结尾",
 "nhjr.ToolBox.RegularExpression.replace":"[VALUE1] .替换( [VALUE2] , [VALUE3])",
+"nhjr.ToolBox.RegularExpression.replaceAll":"[VALUE1] .替换所有( [VALUE2] , [VALUE3])",
 "nhjr.ToolBox.RegularExpression.split":"[VALUE1]使用[VALUE2]分割为列表"
 }
