--- a/locales/en.json
+++ b/locales/en.json
@@ -97,9 +97,10 @@
 "nhjr.ToolBox.StringAndType.ScratchType":"ScratchType [VALUE]",
 "nhjr.ToolBox.StringAndType.repeat":"[VALUE] repeat [REPEAT]",
 "nhjr.ToolBox.StringAndType.slice":"[VALUE] slice( [NUMBER1] , [NUMBER2] )",
-"nhjr.ToolBox.StringAndType.DecimalToHex":"decimal to hex [VALUE] ,0x? [ADD0X]","nhjr.ToolBox.StringAndType.hex.menu.true":"true","nhjr.ToolBox.StringAndType.hex.menu.false":"false",
-"nhjr.ToolBox.StringAndType.HEXToDecimal":"hex to decimal [VALUE]",
-"nhjr.ToolBox.StringAndType.NumberToString":"Number([VALUE]).toString([TOSTRING])",
+"nhjr.ToolBox.StringAndType.DecimalToHex":"decimal integer to hex [VALUE] ,0x? [ADD0X]","nhjr.ToolBox.StringAndType.hex.menu.true":"true","nhjr.ToolBox.StringAndType.hex.menu.false":"false",
+"nhjr.ToolBox.StringAndType.HEXToDecimal":"hex integer to decimal [VALUE]",
+"nhjr.ToolBox.StringAndType.NumberToString":"integer [VALUE] to [TOSTRING] base",
+"nhjr.ToolBox.StringAndType.parseInt":"parseInt([V1],[V2])",
 "nhjr.ToolBox.StringAndType.RemoveBeginEndingWhiteSpace":"[VALUE] Remove begin&ending WhiteSpace",
 "nhjr.ToolBox.StringAndType.TextToURL":"TextToURL [CODE] [VALUE]","nhjr.ToolBox.StringAndType.TextToURL.menu.encodeURIComponent":"encodeURIComponent","nhjr.ToolBox.StringAndType.TextToURL.menu.escape":"escape","nhjr.ToolBox.StringAndType.TextToURL.menu.encodeURI":"encodeURI",
 "nhjr.ToolBox.StringAndType.URLToText":"URLToText [CODE] [VALUE]","nhjr.ToolBox.StringAndType.URLToText.menu.decodeURIComponent":"decodeURIComponent","nhjr.ToolBox.StringAndType.URLToText.menu.unescape":"unescape","nhjr.ToolBox.StringAndType.URLToText.menu.decodeURI":"decodeURI",
