--- a/locales/zh-cn.json
+++ b/locales/zh-cn.json
@@ -49,9 +49,10 @@
 "nhjr.ToolBox.StringAndType.String":"转为字符串 [VALUE]",
 "nhjr.ToolBox.StringAndType.repeat":"[VALUE] 重复 [REPEAT] 次",
 "nhjr.ToolBox.StringAndType.slice":"[VALUE] slice截取( [NUMBER1] , [NUMBER2] )",
-"nhjr.ToolBox.StringAndType.DecimalToHex":"10进制转16进制 [VALUE] ,0x? [ADD0X]",
-"nhjr.ToolBox.StringAndType.HEXToDecimal":"16进制转10进制 [VALUE]",
-"nhjr.ToolBox.StringAndType.NumberToString":"数[VALUE]转为[TOSTRING]进制",
+"nhjr.ToolBox.StringAndType.DecimalToHex":"10进制整数转16进制 [VALUE] ,0x? [ADD0X]",
+"nhjr.ToolBox.StringAndType.HEXToDecimal":"16进制整数转10进制 [VALUE]",
+"nhjr.ToolBox.StringAndType.NumberToString":"整数[VALUE]转为[TOSTRING]进制",
+"nhjr.ToolBox.StringAndType.parseInt":"[V2]进制数[V1]转10进制",
 "nhjr.ToolBox.StringAndType.RemoveBeginEndingWhiteSpace":"[VALUE] 删除开头结尾空白符",
 "nhjr.ToolBox.StringAndType.TextToURL":"文字转链接 [CODE] [VALUE]",
 "nhjr.ToolBox.StringAndType.URLToText":"链接转文字 [CODE] [VALUE]",
